--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -e js,handlebars,css,html server.js",
+    "seed": "node db/seeds.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
-    "mysql2": "^3.3.0",
+    "express-session-sequelize": "^2.3.0",
+    "mysql2": "^3.3.1",
     "sequelize": "^6.31.1"
   }
 }
